--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,28 @@
     transform: rotate(360deg);
   }
 }
+
+
+.signin {
+  margin: 440px;
+  border: 1px solid rgb(224, 221, 214) ;
+  margin-top: 85px;
+  border-radius: 8px;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  background-color: #ac9999;
+}
+.form-submit {
+  padding: 3px;
+  /* margin-bottom: 64px; */
+  width: 130px;
+  background-color: rgb(33, 41, 27);
+  border: none;
+  border-radius: 4px;
+  margin-bottom: 19px;
+  margin-left: 7px;
+  color: white;
+}
+.form-submit:hover{
+  background-color: rgb(110, 122, 97);
+  border-radius: 20px;
+}
